--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_sound: ^9.1.7
+  permission_handler: ^9.2.0
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
