--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_sound: ^9.1.7
   permission_handler: ^9.2.0
   path_provider: ^2.0.9
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
