--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.9
   avatar_glow: ^2.0.2
   audioplayers: ^0.20.1
+  share_plus: ^4.0.1
 
 dev_dependencies:
   flutter_test:
