--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"></uses-permission>
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
    <application
-        android:label="voice_recorder"
+        android:label="Voice Recorder"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
