--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   avatar_glow: ^2.0.2
   share_plus: ^4.0.1
   just_audio: ^0.9.20
+  get_storage:
+  get:
+  google_fonts: 2.0.0
 
 dev_dependencies:
   flutter_test:
